Agregando estilos al sitio

--- a/index.html
+++ b/index.html
@@ -5,9 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/vnd.microsoft.icon" href="Resources/bg.jpg" sizes="36x36">
+    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Sitio en Mantenimiento</title>
 </head>
 <body>
-    
+    <div class='main'>
+        <div class="section">
+            <div class="container--msg">
+                <h1 class="msg__head">¡Sitio en mantenimiento!</h1>
+                <p class="msg__body"><br>Volveremos pronto.</p>
+            </div>
+            <br><br><br> 
+            <footer class='main_footer'>
+                <a href='https://www.facebook.com/banguat' target='_blank'>
+                    <i class='fab fa-facebook-f'></i>
+                </a>
+                <a href='https://twitter.com/banguat' target='_blank'>
+                    <i class='fab fa-twitter'></i>
+                </a>
+                </a>
+                <a href='https://www.instagram.com/banguat/' target='_blank'>
+                    <i class='fab fa-instagram'></i>
+                </a>
+                <a href='https://www.youtube.com/user/BANGUAT' target='_blank'>
+                    <i class='fab fa-youtube'></i>
+                </a>
+            </footer>          
+        </div>
+    </div>
+ 
+    <!--Animaciones -->
+    <div class="gear">
+        <i class="fa fa-cog" aria-hidden="true"></i>
+    </div>
+    <div class="gear2">
+        <i class="fa fa-cog" aria-hidden="true"></i>
+    </div>   
 </body>
 </html>
