--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <h1 class="msg__head">¡Sitio en mantenimiento!</h1>
                 <p class="msg__body"><br>Volveremos pronto.</p>
             </div>
-            <br><br><br> 
+            <br><br><br><br><br><br>
             <footer class='main_footer'>
                 <a href='https://www.facebook.com/banguat' target='_blank'>
                     <i class='fab fa-facebook-f'></i>
@@ -42,5 +42,8 @@
     <div class="gear2">
         <i class="fa fa-cog" aria-hidden="true"></i>
     </div>   
+    <div class="gear3">
+        <i class="fa fa-cog" aria-hidden="true"></i>
+    </div>  
 </body>
 </html>
